Fix alignment issue with expand
When expand was turned on, the text went all funky and the bottom of the
header went weird. With this new setup, the blue expands to at least the
bottom of the button (based on header-height).

In the process, I ended up fixing the margin at the top of the blue-ness
as well. There's now a 1px border with the dark layout, like there is
around the rest of the top of the page, so that it aligns with the top
of the button. This is unnecessary on the light theme, since there is no
border to align with.

--- a/sass/compose.scss
+++ b/sass/compose.scss
@@ -40,15 +40,31 @@
 }
 
 .compose-header, .compose-title, .js-compose-title {
-  margin-top: 0px;
-  @if $header-height < 40px {
-    height: 40px;
-	line-height: 40px;
+  @if $header-height < 46px {
+    height: 46px;
+	line-height: 46px;
   }
   @else {
     height: $header-height;
 	line-height: $header-height;
   }
+}
+
+@if $header-height < 40px {
+.is-condensed .compose-header, .is-condensed .compose-title, .is-condensed .js-compose-title {
+  height: 40px;
+  line-height: 40px;
+}
+}
+
+.compose-title {
+  margin-top: 0px !important;
+}
+
+@if $theme == dark { //alignment with button on dark theme. A bit hacky, but also solves 1px off alignment on light theme.
+.compose-header {
+  margin-top: 1px;
+}
 }
 
 .compose-header .margin-vm {
